# semantic-release-test

./: README.md  commitlint.config.js  eslint.config.mjs  package.json  test.js
.github/workflows/: release.yml
docs/gitbook/: changelog.md
docs/gitbook/elixir/: changelog.md
docs/gitbook/python/: changelog.md
elixir/: mix.exs  package.json
python/: .gitignore  package.json  pyproject.toml  release.sh
src/: index.ts
